# cswatch-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: console_watcher.rs  gsi.rs  lib.rs  main.rs  settings.rs  sharecode.rs  tray.rs
src/components/: RosterPanel.tsx  ScorePanel.tsx  SettingsPanel.tsx
